# tg_bot

./: .env  .gitignore  Dockerfile  alembic.ini  config.py  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml
alembic/: env.py
alembic/versions/: 0c4f6f3d0a91_update_find_for_me_requests.py  3fd1bcaa9bcc_add_user_search_history_table.py  47cf6bc6e1fc_add_user_find_for_me_requests.py  4963b434be8a_init.py  4d41953060b1_remove_username_from_find_for_me.py  4ebed1cdb743_add_username_to_find_for_me_table.py  6386177132dd_update_find_for_me_requests.py  86d35f02d849_initial_migration.py  a61277c8cb3f_add_user_id_foreign_key_to_search_.py  d9e172cc8fec_add_user_id_foreign_key_to_search_.py  db66b688bc35_add_phone_number_to_user_table.py
auction_api/: auction_api.py  serializers.py  types.py  utils.py
database/crud/: base.py  find_for_me.py  user.py  user_search_history.py
database/db/: init_db.py  session.py
database/models/: __init__.py  find_for_me.py  user.py  user_search_history.py
database/schemas/: find_for_me.py  user.py  user_search_history.py
external_apis/: base.py
external_apis/auction_api/: auction_api.py  serializers.py  types.py  utils.py
external_apis/carfax_api/: carfax_api.py  serializers.py  types.py
external_apis/payment_api/: payment_api.py  types.py
locales/: messages.pot
telegram_bot/: middelwares.py
telegram_bot/locales/: messages.pot
telegram_bot/states/: carfax.py  find_for_me.py  start_keyboard.py
telegram_bot/utils/: callback_query.py  find_for_me.py
(+42 files in other folders)
